--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head lang="en">
     <eta charset="UTF-8">
-      <title>MINU LEHT</title>
-      <title>222802</title>
+      <title>MINU LEHT 222802</title>
       </head>
   <body>
     <h1>MINU LEHT</h1>
