--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
       <title>MINU LEHT 222802</title>
       </head>
   <body>
-    <h1>MINU LEHT</h1>
+    <h1>MINU LEHT 222802</h1>
   </body>
 </html> 
